fix archive of games and add array of years
